# pysh

./: .gitignore  README.md  setup.cfg
src/pysh/: printing.py  shell.py  tools.py
