[metadata]
name = pysh
version = 0.0.3
author = Tim Gremalm
author_email = tim.gremalm@gremalm.se
description = An interactive python shell that can be started to help with debug and prototyping.
long_description = file: README.md
long_description_content_type = text/markdown
url = https://github.com/TimGremalm/pysh
project_urls =
    Bug Tracker = https://github.com/TimGremalm/pysh/issues
classifiers =
    Programming Language :: Python :: 3
    License :: OSI APPROVED :: GNU GENERAL PUBLIC LICENSE V3 (GPLV3)
    Operating System :: OS Independent

[options]
package_dir =
    = src
packages = find:
python_requires = >=3.6
install_requires =
    ipython
    rich

[options.packages.find]
where = src
